--- a/src/assets/components/header.css
+++ b/src/assets/components/header.css
@@ -24,11 +24,15 @@
 
 .nested-enter-from .inner,
 .nested-leave-to .inner {
-  transform: translateY(-30px);
+  transform: translateX(-30px);
   /*
   	Hack around a Chrome 96 bug in handling nested opacity transitions.
     This is not needed in other browsers or Chrome 99+ where the bug
     has been fixed.
   */
   opacity: 0.001;
+}
+
+.is-active{
+  text-decoration-line: line-through;
 }
