--- a/src/assets/components/homeP.css
+++ b/src/assets/components/homeP.css
@@ -45,5 +45,5 @@
 
 
   .back{
-    background-image: url('/src/assets/img/preview.jpg');
+    background-image: url('/src/assets/svg/composition-24.svg');
   }
